# BlockSci

./: .bandit  .buildinfo  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CMakeLists.txt  Doxyfile  README  README.rst  changelog.html  compiling.html  contributing.html  cppcheck.cmake  demo.html  environment.yml  fluent-interface.html  genindex.html  getting-started.html  includeme.html  index.html  objects.inv  py-modindex.html  readme.html  requirements.txt  search.html  searchindex.js  setup.html  setup.py  troubleshooting.html  using-blocksci.html
benchmark/: CMakeLists.txt  main.cpp
blockscipy/: CMakeLists.txt  MANIFEST.in  setup.py
blockscipy/blocksci/: __init__.py  currency.py  opreturn.py  pickler.py
blockscipy/src/: address_type_range.cpp  address_type_range.hpp  blocksci_iterator_type.cpp  blocksci_iterator_type.hpp  blocksci_range.hpp  blocksci_range_create.hpp  blocksci_range_type.cpp  blocksci_range_type.hpp  blocksci_type.cpp  blocksci_type.hpp  blocksci_type_converter.cpp  blocksci_type_converter.hpp  bool_range.cpp  bool_range.hpp  bytes_range.cpp  bytes_range.hpp  caster_py.hpp  func_converter.hpp  generic_proxy.cpp  generic_proxy.hpp  generic_sequence.cpp  generic_sequence.hpp  heuristics_py.cpp  int_range.cpp  int_range.hpp  method_tags.hpp  method_types.cpp  method_types.hpp  optional_ranges_py.hpp  optional_utils.hpp  other_proxy_py.cpp  other_proxy_py.hpp  proxy.hpp  proxy_apply_py.hpp  proxy_create.cpp  proxy_create.hpp  proxy_operators.hpp  proxy_py.hpp  proxy_py_create.hpp  proxy_type_check.cpp  (+33 more)
clustering/: CMakeLists.txt  cluster.html  cluster_manager.html  clustering.html  tagged_cluster.html  tagged_dedup_address.html  tagged_equiv_address.html  tagging.html
python/: CMakeLists.txt  MANIFEST.in  requirements.txt  setup.py
python/blocksci/: __init__.py
python/src/: address_py.cpp  address_py.hpp  address_range_py.cpp  address_range_py.hpp  block_py.cpp  block_py.hpp  blockchain_py.cpp  caster_py.hpp  cluster_py.cpp  cluster_py.hpp  function_traits.hpp  heuristics_py.cpp  input_py.cpp  input_py.hpp  input_range_py.cpp  input_range_py.hpp  method_types.hpp  multisig_py.cpp  multisig_py.hpp  nonstandard_py.cpp  nonstandard_py.hpp  nulldata_py.cpp  nulldata_py.hpp  output_py.cpp  output_py.hpp  output_range_py.cpp  output_range_py.hpp  pubkey_py.cpp  pubkey_py.hpp  pubkey_range_py.cpp  pubkey_range_py.hpp  pubkeyhash_range_py.cpp  python_interface.cpp  range_apply_py.hpp  range_conversion.cpp  range_conversion.hpp  range_filter_apply_py.hpp  ranges_py.cpp  ranges_py.hpp  scripthash_py.cpp  (+7 more)
src/: CMakeLists.txt  blocksci-config.cmake  blockscitest.cpp  exception.cpp  export.cpp  main.cpp
src/address/: address.cpp  address_unity.cpp  equiv_address.cpp
src/benchmark/: CMakeLists.txt  main.cpp
src/blocksci/: CMakeLists.txt  address.hpp  bitcoin_uint256.cpp  bitcoin_uint256.hpp  blocksci-config.cmake  blocksci.hpp  blocksci_fwd.hpp  blocksci_unity.cpp  chain.hpp  data_access.cpp  data_access.hpp  data_configuration.cpp  data_configuration.hpp  database.cpp  database.hpp  exception.cpp  exception.hpp  file_mapper.cpp  file_mapper.hpp  hash.cpp  hash.hpp  hash_index.cpp  hash_index.hpp  heuristics.hpp  index.hpp  parallel.hpp  script.hpp  scripts.hpp  state.cpp  state.hpp  typedefs.hpp  uint256.cpp  update_state.cpp  update_state.hpp  util.hpp
src/chain/: block.cpp  block_range.cpp  blockchain.cpp  chain_access.cpp  inout_pointer.cpp  input.cpp  input_pointer.cpp  output.cpp  output_pointer.cpp  transaction.cpp  transaction_range.cpp
src/cluster/: cluster.cpp  cluster_access.cpp  cluster_manager.cpp
src/clusterer/: CMakeLists.txt  main.cpp
src/core/: address_info.cpp  bitcoin_uint256.cpp  file_mapper.cpp  raw_address.cpp  script_access.cpp  script_data.cpp
src/example/: CMakeLists.txt  blockscitest.cpp  example.cpp  performance.cpp  performance.hpp
src/heuristics/: blockchain_heuristics.cpp  change_address.cpp  taint.cpp  tx_identification.cpp
src/index/: address_index.cpp  address_index_priv.cpp  address_output_range.cpp  column_iterator.cpp  column_iterator.hpp  hash_index.cpp  hash_index_priv.cpp  hash_index_priv.hpp  index_unity.cpp  mempool_index.cpp
src/internal/: CMakeLists.txt  address_index.cpp  address_index.hpp  address_info.cpp  address_info.hpp  address_output_range.cpp  address_output_range.hpp  bitcoin_script.cpp  bitcoin_script.hpp  bitcoin_uint256_hex.cpp  bitcoin_uint256_hex.hpp  chain_access.hpp  chain_configuration.cpp  chain_configuration.hpp  cluster_access.hpp  column_iterator.hpp  data_access.cpp  data_access.hpp  data_configuration.cpp  data_configuration.hpp  dedup_address_info.cpp  dedup_address_info.hpp  dedup_address_type.hpp  exception.cpp  exception.hpp  file_mapper.hpp  hash.cpp  hash.hpp  hash_index.cpp  hash_index.hpp  mempool_index.hpp  progress_bar.hpp  script_access.hpp  script_info.hpp  script_view.cpp  script_view.hpp  state.cpp  state.hpp
src/mempool_recorder/: CMakeLists.txt  main.cpp
src/parser/: CMakeLists.txt  MurmurHash3.cpp  MurmurHash3.hpp  address_db.cpp  address_db.hpp  address_state.cpp  address_state.hpp  address_traverser.cpp  address_traverser.hpp  address_writer.cpp  address_writer.hpp  basic_types.cpp  basic_types.hpp  block_processor.cpp  block_processor.hpp  block_replayer.cpp  block_replayer.hpp  blockchain_state.cpp  blockchain_state.hpp  bloom_filter.cpp  bloom_filter.hpp  chain_index.cpp  chain_index.hpp  chain_writer.cpp  chain_writer.hpp  config.hpp  file_writer.cpp  file_writer.hpp  first_seen_index.cpp  first_seen_index.hpp  hash_index.cpp  hash_index.hpp  hash_index_creator.cpp  hash_index_creator.hpp  main.cpp  output_spend_data.cpp  output_spend_data.hpp  parser_configuration.cpp  parser_configuration.hpp  parser_fwd.hpp  (+26 more)
src/python-interface/: CMakeLists.txt  address_index.cpp  address_py.cpp  address_py.hpp  any_script_caster.hpp  block_py.cpp  block_py.hpp  blockchain_py.cpp  caster_py.hpp  chain_algorithms.cpp  chain_algorithms.hpp  cluster_py.cpp  cluster_py.hpp  heuristics_py.cpp  inout_py.cpp  input_py.cpp  input_py.hpp  (+27 more)
(+1421 files in other folders)
